[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curl = "0.4.44"
clap = {version = "3.2.8", features = ["derive"]}
# tui = "0.19"
# crossterm = "0.25"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
# config = "0.13.3"
anyhow = "1.0.68"
