[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.2.8", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
uuid = { version = "1.2", features = ["serde", "v4"] }
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
anyhow = "1.0.68"
dirs = "4.0.0"
