[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
uuid = { version = "1.2", features = ["serde", "v4"] }
dirs = "4.0"
matches = "0.1.8"
regex = "1"
chrono = "0.4.23"
chrono-tz = "0.8.1"
colored = "2.0.0"
clap = "4.0.30"
